# Functional-programming

./: lab0.docx  ~$lab0.docx
.github/workflows/: ci.yml  haskell.yaml
lab1/: README.md  lab1.cabal  package.yaml  stack.yaml
lab1/.github/workflows/: ci.yml
lab1/github/workflows/: ci.yml
lab1/scr/: Test.hs
lab1/scr/task 10/: Test.hs  python.py  task10_1a.hs  task10_1b.hs  task10_2.hs  task10_3.hs  task10_4.hs  task10_5.hs
lab1/scr/task 21/: Test.hs  python.py  task23_1b.hs  task23_2.hs  task23_3.hs  task23_4.hs  task23_5.hs
lab1/scr/task 23/: python.py  task23_1a.hs  task23_2.hs  task23_3.hs
lab2/: README.md  lab-hashmap.cabal  lab2.cabal  lab2.docx  package.yaml  stack.yaml
lab2/app/: Main.hs
lab2/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
lab2/src/: Dict.hs  HashMap.hs
lab2/test/: DictionaryPropertyTest.hs  DictionaryUnitTest.hs  Tests.hs
