cabal-version:      3.0
name:               lab1
version:            0.1.0.0
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             Egor
maintainer:         agasha3000@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
            Task3
            Task28
    build-depends:
        base ^>=4.17.2.1,
        tasty,
        tasty-hunit
    hs-source-dirs:   src
    default-language: Haskell2010

executable lab1
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        tasty,
        tasty-hunit
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite lab1-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
        Task3test
        Task28test
    build-depends:
        base ^>=4.17.2.1,
        tasty,
        tasty-hunit,
        hlint,
        hlint >=2.2.0,
        lab1
