cabal-version: 2.4

name:                lab1
version:             0.1.0.0
synopsis:            Example of a Haskell project with mathematical code and tests
description:         This is a Haskell project that contains code to solve mathematical problems using multiple functions.
author:              Your name
maintainer:          Your email
license:             BSD-3-Clause
license-file:        LICENSE
build-type:          Simple

library
  exposed-modules:     Task10_1a, Task10_1b, Task23_1a, Task23_1b
  build-depends:       base >= 4.14 && < 5, 
                        QuickCheck >= 2.14 && < 3
  default-language:     Haskell2010

test-suite lab1-test-task10
  type:                exitcode-stdio-1.0
  main-is:             src/Test.hs
  build-depends:       base >= 4.14 && < 5,
                        HUnit >= 1.6.0.0,
                        lab1
  default-language:     Haskell2010

test-suite lab1-test-task23
  type:                exitcode-stdio-1.0
  main-is:             src/Test.hs
  build-depends:       base >= 4.14 && < 5,
                        HUnit >= 1.6.0.0,
                        lab1
  default-language:     Haskell2010
